--- a/User/main.html
+++ b/User/main.html
@@ -25,7 +25,10 @@
         <!-- Top - Header -->
         <div class="header-top">
             <div class="container-header">
-                <a href="#" class="logo">Tên web + logo nhóm</a>
+                <a href="#" class="logo">
+                    <img src="../assets/images/logo.png" alt="">
+                    <span>EightTech</span>
+                </a>
 
                 <div class="search-container">
                     <div class="search-bar">
@@ -80,8 +83,7 @@
                     <div>
                         <div id="openLogin" class="user-infor">
                             <span id="loginText">Đăng nhập</span>
-                            <img id="avatarUser" src=""
-                                style="display:none; width:20px; height:20px; border-radius:50%;">
+                            <img id="avatarUser">
                         </div>
 
                         <div id="dropUser" class="hidden">
@@ -623,9 +625,9 @@
             <div class="footer-right">
                 <strong>THEO DÕI CHÚNG TÔI</strong>
                 <div class="socials">
-                    <div class="social-box"></div>
-                    <div class="social-box"></div>
-                    <div class="social-box"></div>
+                    <div class="social-box"><img src="../assets/images/fb.png"></div>
+                    <div class="social-box"><img src="../assets/images/ig.png"></div>
+                    <div class="social-box"><img src="../assets/images/tiktok.webp"></div>
                 </div>
             </div>
         </div>
