--- a/admin/admin.html
+++ b/admin/admin.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dashboard Admin</title>
-  <link rel="stylesheet" href="/WebBanLap/assets/css/admin.css" />
-  <link rel="stylesheet" href="/WebBanLap/assets/css/pricing.css" />
-  <link rel="stylesheet" href="/WebBanLap/assets/css/logout.css" />
+  <link rel="stylesheet" href="../assets/css/admin.css" />
+  <link rel="stylesheet" href="../assets/css/pricing.css" />
+  <link rel="stylesheet" href="../assets/css/logout.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
@@ -84,11 +84,12 @@
     </div>
   </div>
 
-  <script src="/WebBanLap/assets/js/admin.js"></script>
-  <script src="/WebBanLap/assets/js/logout.js"></script>
-  <script src="/WebBanLap/assets/js/products.js"></script>
-  <script src="/WebBanLap/assets/js/pricing.js"></script>
-  <script src="/WebBanLap/assets/js/stock.js"></script>
-  <script src="/WebBanLap/assets/js/receipt.js"></script>
+  <script src="../assets/js/admin.js"></script>
+  <script src="../assets/js/logout.js"></script>
+  <script src="../assets/js/products.js"></script>
+  <script src="../assets/js/AdminProduct.js"></script>
+  <script src="../assets/js/pricing.js"></script>
+  <script src="../assets/js/stock.js"></script>
+  <script src="../assets/js/receipt.js"></script>
 </body>
 </html>
