--- a/WebBanLap-main/User/main.html
+++ b/WebBanLap-main/User/main.html
@@ -558,6 +558,7 @@
                             <div class="button-group">
                                 <button type="button" id="edit-profile">Chỉnh sửa</button>
                                 <button type="submit" id="save-profile" class="hidden">Lưu</button>
+                                <button type="button" id="cancel-profile" class="hidden">Hủy</button>
                             </div>
                         </form>
                     </div>
