--- a/WebBanLap-main/admin/admin.html
+++ b/WebBanLap-main/admin/admin.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="vi">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,7 +9,6 @@
   <link rel="stylesheet" href="../assets/css/logout.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
-
 <body>
   <!-- Sidebar -->
   <aside class="sidebar" id="sidebar">
@@ -21,6 +19,10 @@
     <div class="menu-item" data-page="customers">
       <i class="fas fa-users"></i>
       <span class="menu-text">Khách hàng</span>
+    </div>
+    <div class="menu-item" data-page="categories">
+      <i class="fas fa-layer-group"></i>
+      <span class="menu-text">Loại sản phẩm</span>
     </div>
     <div class="menu-item" data-page="products">
       <i class="fas fa-box"></i>
@@ -89,9 +91,9 @@
   <script src="../assets/js/admin.js"></script>
   <script src="../assets/js/logout.js"></script>
   <script src="../assets/js/products.js"></script>
+  <script src="../assets/js/AdminProduct.js"></script>
   <script src="../assets/js/pricing.js"></script>
   <script src="../assets/js/stock.js"></script>
   <script src="../assets/js/receipt.js"></script>
 </body>
-
 </html>
