--- a/admin/adminlog.html
+++ b/admin/adminlog.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Admin Login</title>
-<link rel="stylesheet" href="/WebBanLap/assets/css/adminlog.css"/>
+<link rel="stylesheet" href="../assets/css/adminlog.css"/>
 </head>
 <body>
 <div class="login-container">
@@ -27,3 +27,4 @@
 <script src="/WebBanLap/assets/js/adminlog.js"></script>
 </body>
 </html>
+
