--- a/admin/adminlog.html
+++ b/admin/adminlog.html
@@ -24,7 +24,8 @@
     <div id="errorMsg" class="error-message"></div>
   </form>
 </div>
-<script src="/WebBanLap/assets/js/adminlog.js"></script>
+<script src="../assets/js/adminlog.js"></script>
 </body>
 </html>
+
 
