Add customers.js script to admin.html

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -95,6 +95,7 @@
   <script src="../assets/js/AdminProduct.js"></script>
   <script src="../assets/js/pricing.js"></script>
   <script src="../assets/js/stock.js"></script>
+  <script src="../assets/js/customers.js"></script>
   <script src="../assets/js/receipt.js"></script>
 </body>
 
