--- a/admin/admin.html
+++ b/admin/admin.html
@@ -88,7 +88,7 @@
       window.location.href = "adminlog.html";
     }
   </script>
-
+  <script src="../assets/js/orders.js"></script>
   <script src="../assets/js/admin.js"></script>
   <script src="../assets/js/logout.js"></script>
   <script src="../assets/js/products.js"></script>
