thêm nút hủy cho profile

--- a/User/main.html
+++ b/User/main.html
@@ -487,6 +487,7 @@
                 </form>
             </div>
         </div>
+
         <!-- ========== PROFILE ========== -->
         <div class="hidden" id="profile">
             <div class="profile-container">
@@ -557,6 +558,7 @@
                             <div class="button-group">
                                 <button type="button" id="edit-profile">Chỉnh sửa</button>
                                 <button type="submit" id="save-profile" class="hidden">Lưu</button>
+                                <button type="button" id="cancel-profile" class="hidden">Hủy</button>
                             </div>
                         </form>
                     </div>
@@ -600,7 +602,6 @@
             </div>
         </div>
     </section>
-
     <!-- ========== FOOTER ========== -->
     <footer>
         <div class="footer-inner">
