--- a/User/main.html
+++ b/User/main.html
@@ -554,6 +554,25 @@
                                     </select>
                                 </div>
                             </div>
+                            <div class="form-group">
+                                <label for="city">Địa chỉ</label>
+                                <div class="address-group">
+
+                                    <select id="city" name="city">
+                                        <option value="">Chọn tỉnh/thành phố</option>
+                                    </select>
+
+                                    <select id="districtpf" name="district">
+                                        <option value="">Chọn quận/huyện</option>
+                                    </select>
+
+
+
+                                    <input type="text" id="address-detail" placeholder="Số nhà, tên đường, thôn/xóm..."
+                                        disabled>
+                                </div>
+                            </div>
+
 
                             <div class="button-group">
                                 <button type="button" id="edit-profile">Chỉnh sửa</button>
