--- a/admin/adminlog.html
+++ b/admin/adminlog.html
@@ -15,7 +15,11 @@
 
     <form id="loginForm" onsubmit="login(event)">
       <input type="email" id="email" placeholder="Nhập email..." required>
-      <input type="password" id="password" placeholder="Nhập mật khẩu..." required>
+      <!-- <input type="password" id="password" placeholder="Nhập mật khẩu..." required> -->
+      <div class="input-eye">
+        <input type="password" id="password" placeholder="Nhập mật khẩu..." required>
+        <img src="../assets/images/eye.jpg" class="eye">
+      </div>
 
       <div class="remember">
         <input type="checkbox" id="remember" style="margin-right:6px;">
