thêm 1 button phụ kiện khác để phụ kiện khác thêm từ admin có thể hiện thị.

--- a/User/main.html
+++ b/User/main.html
@@ -203,6 +203,7 @@
                 <button>Tai nghe</button>
                 <button>Chuột</button>
                 <button>Bàn phím</button>
+                <button>Phụ kiện khác</button>
             </div>
 
             <div class="product-grid" id="accessory-grid">
@@ -676,5 +677,6 @@
 
 
 </body>
+
 
 </html>
