--- a/admin/admin.html
+++ b/admin/admin.html
@@ -54,8 +54,7 @@
     <header class="header">
       <div class="user-info">
         <div class="user-text">
-          <span class="greeting">Hi, <strong>Meo</strong></span>
-          <span class="role">Admin</span>
+          <span class="greeting">Hi, <strong>Admin</strong></span>
         </div>
         <div class="avatar">
           <i class="fas fa-user-circle"></i>
